--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,10 @@ dependencies:
   #config app
   flutter_dotenv: ^5.2.1
   flutter_flavorizr: ^2.2.3
+  collection: ^1.18.0
+  flutter_local_notifications: ^18.0.1
+  path_provider: ^2.1.5
+  flutter_launcher_icons: ^0.14.2
 
 
 
