--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   flutter_local_notifications: ^18.0.1
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.2
+  path: ^1.9.0
 
 
 
