--- a/.env/.env.dev
+++ b/.env/.env.dev
@@ -1,3 +1,3 @@
 BASE_URL=https://jsonplaceholder.typicode.com
+BASE_SOCKET_URL=http://dev.yourserver.com/socket
 API_KEY=your_dev_api_key
-DEBUG=true
