--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore environment files in the .env folder
+.env/.env.dev
+.env/.env.qa
+.env/.env.prod
