--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -88,6 +88,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.2
   path: ^1.9.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -99,6 +100,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
+  intl_translation: ^0.20.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
