--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,7 +52,7 @@ dependencies:
   permission_handler: ^11.3.1
 
   #localication
-  intl: ^0.20.1
+  intl: any
 
   #image
   cached_network_image: ^3.4.1
@@ -100,7 +101,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
-  intl_translation: ^0.20.1
+  intl_utils: ^2.8.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -115,7 +116,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - .env/
+    - .env/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -144,6 +145,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  generate: true
+
 
 flavorizr:
   app:
@@ -200,3 +204,11 @@ flavorizr:
         versionNameSuffix: "-debug"
       release:
         buildMode: release
+
+flutter_intl:
+  enabled: true # Set to true to activate the package
+  class_name: S # This sets the class name for the generated localization class (default is S)
+  main_locale: en # Main locale used for generating localization files
+  arb_dir: lib/l10n # Directory where your ARB files will be located
+  output_dir: lib/generated # Directory where the generated Dart localization files will be placed
+  use_deferred_loading: false # Set to true if you want to use deferred loading
