--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   #serialize
   freezed: ^2.5.7
   freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
   #UI
   flutter_native_splash: ^2.4.3
@@ -88,6 +89,7 @@ dependencies:
   path_provider: ^2.1.5
   flutter_launcher_icons: ^0.14.2
   path: ^1.9.0
+  fpdart: ^1.1.1
 
 
 dev_dependencies:
@@ -102,6 +104,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   build_runner: ^2.4.13
   intl_utils: ^2.8.7
+  json_serializable: ^6.9.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
