--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,8 @@ dependencies:
   cached_network_image: ^3.4.1
 
   #state management
-  provider: ^6.1.2
+  riverpod_annotation: ^2.6.1
+  flutter_riverpod: ^2.6.1
 
   #log
   talker: ^4.5.2
@@ -105,6 +106,9 @@ dev_dependencies:
   build_runner: ^2.4.13
   intl_utils: ^2.8.7
   json_serializable: ^6.9.0
+  riverpod_generator: ^2.6.3
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
