--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   talker: ^4.5.2
   talker_flutter: ^4.5.2
   talker_dio_logger: ^4.5.2
+  talker_riverpod_logger: ^4.5.2
 
   #serialize
   freezed: ^2.5.7
